5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1573_2896.log
== TEST (2019-03-13 14:04:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(abacaxi) 

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(abacaxi) 
NameError: name 'abacaxi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:05:28) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(abacaxi) 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(abacaxi) 
NameError: name 'abacaxi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:05:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(abacaxi) 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.152127
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = input(abacaxi) 
NameError: name 'abacaxi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:05:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(phyton) 

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(phyton) 
NameError: name 'phyton' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:05:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(phyton) 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.16257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/2896/main.py", line 4, in <module>
    var = input(phyton) 
NameError: name 'phyton' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:05:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(''phyton'') 

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(''phyton'') 
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:05:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(''phyton'') 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.198844
-- ERROR:
  File "/home/codebench/codes/1573/2896/main.py", line 4
    var = input(''phyton'') 
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:06:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome") 

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:06:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("digite o nome") 

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.180615
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
